src/Base/main/default/objects/MIM_Date_Change_Temp__c/fields/Manufacturing_Inventory_Movement__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Inventory_Movement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturing Inventory Movement</label>
    <referenceTo>AcctSeedERP__Manufacturing_Inventory_Movement__c</referenceTo>
    <relationshipLabel>MIM Date Change Temps</relationshipLabel>
    <relationshipName>MIM_Date_Change_Temps</relationshipName>
    <type>Lookup</type>
</CustomField>