src/Base/main/default/objects/MIM_Date_Change_Temp__c/fields/Modified__c.field-meta.xml
<CustomField>
    <fullName>Modified__c</fullName>
    <formula>AND(Manufacturing_Inventory_Movement__r.AcctSeedERP__Movement_Date__c = DATE(2017,9,29),  DATEVALUE(Manufacturing_Inventory_Movement__r.LastModifiedDate) = DATE(2018,1,16),   Manufacturing_Inventory_Movement__r.LastModifiedBy.CommunityNickname = &#39;rubel&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified</label>
    <type>Checkbox</type>
</CustomField>