src/Base/main/default/objects/MIM_Date_Change_Temp__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <formula>Manufacturing_Inventory_Movement__r.AcctSeedERP__Movement_Date__c = DATE(2017,9,29)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated</label>
    <type>Checkbox</type>
</CustomField>